--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -4,17 +4,11 @@ html {
 /* body {
   background-image: url("../../assets/images/gradient-bg-1280.jpg");
 } */
-/* .visiting {
-  background-color: white;
-}
-.visiting-container {
-  height: 1116px;
-  padding: 75px 0;
-  background-color: white;
-} */
+
 /* ----------------------------HEADER---------------------------- */
 .header {
   background-image: url("../../assets/images/gradient-bg-1280.jpg");
+  background-size: 100%;
   /* background: url(noise_lines_transparent@2X.png),
     radial-gradient(100% 215.42% at 0% 0%, #5b483a 0%, #262425 100%), #211f20; */
 }
@@ -28,7 +22,7 @@ html {
 
 .header-container {
   display: flex;
-  background-image: url("../../assets/images/gradient-bg-1280.jpg");
+  /* background-image: url("../../assets/images/gradient-bg-1280.jpg"); */
   background-repeat: no-repeat;
   background-position: center 0;
   align-items: center;
@@ -71,10 +65,13 @@ html {
 
 .header-nav {
   margin-left: auto;
-  padding-top: 67px;
+  padding-top: 58px;
   padding-right: 5px;
   /* height: 27px; */
   /* max-width: 720px; */
+}
+
+.header-ul {
 }
 
 .header-li {
@@ -114,11 +111,12 @@ html {
 /* ----------------------------NOT ONLY---------------------------- */
 .not-only {
   background-image: url("../../assets/images/gradient-bg-1280.jpg");
+  background-size: 100%;
   /* background: url(noise_lines_transparent@2X.png),
     radial-gradient(100% 215.42% at 0% 0%, #5b483a 0%, #262425 100%), #211f20; */
 }
 .not-only-container {
-  background-image: url("../../assets/images/gradient-bg-1280.jpg");
+  /* background-image: url("../../assets/images/gradient-bg-1280.jpg"); */
   padding-top: 59px;
   /* background-repeat: no-repeat; */
   /* background-position: center -90px; */
@@ -183,6 +181,12 @@ html {
   border-radius: 100px;
 }
 
+.not-only-button:hover {
+  background: #fddcc4;
+  cursor: pointer;
+  transition: 1s;
+}
+
 .not-only-button-link {
   font-family: "Georgia", serif;
   font-style: normal;
@@ -192,12 +196,6 @@ html {
   letter-spacing: 1px;
   color: #292929;
   text-decoration: none;
-}
-
-.not-only-button:hover {
-  background: #fddcc4;
-  cursor: pointer;
-  transition: 1s;
 }
 
 .not-only-image1 {
@@ -214,9 +212,10 @@ html {
 /* ----------------------------ABOUT---------------------------- */
 .about {
   background-color: #ffffff;
+  background-size: 100%;
 }
 .about-container {
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
   padding-top: 80px;
   height: 588px;
 }
@@ -278,12 +277,13 @@ html {
 /* ----------------------------OUR FRIENDS---------------------------- */
 .our-friends {
   background: #f6f6f6;
+  background-size: 100%;
 }
 
 .our-friends-container {
   height: 877px;
   padding-top: 80px;
-  background: #f6f6f6;
+  /* background: #f6f6f6; */
 }
 
 .our-friends-block {
@@ -348,30 +348,6 @@ html {
   transition: 1s;
 }
 
-.previous-next-box {
-  display: flex;
-  justify-content: space-evenly;
-  margin-top: 22px;
-}
-.previous-320 {
-  width: 52px;
-  height: 52px;
-  border: 2px solid #f1cdb3;
-  background-color: transparent;
-  border-radius: 50%;
-  margin-right: 5px;
-  display: none;
-}
-.next-320 {
-  width: 52px;
-  height: 52px;
-  border: 2px solid #f1cdb3;
-  background-color: transparent;
-  border-radius: 50%;
-  margin-left: 5px;
-  display: none;
-}
-
 .arrow {
   background-repeat: no-repeat;
   background-position: center;
@@ -424,11 +400,11 @@ html {
   /* width: 260px; */
 }
 
-/* .card:hover .card-button {
+.card:hover .card-button {
   background: #fddcc4;
   cursor: pointer;
   transition: 1s;
-} */
+}
 
 /* ----modal---- */
 .card-link {
@@ -573,7 +549,7 @@ html {
   padding: 20px;
 }
 
-li {
+.modal-li {
   padding-bottom: 10px;
   color: #f1cdb3;
 }
@@ -600,6 +576,29 @@ li {
 }
 
 /* ------------------ */
+.previous-next-box {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 22px;
+}
+.previous-320 {
+  width: 52px;
+  height: 52px;
+  border: 2px solid #f1cdb3;
+  background-color: transparent;
+  border-radius: 50%;
+  margin-right: 5px;
+  display: none;
+}
+.next-320 {
+  width: 52px;
+  height: 52px;
+  border: 2px solid #f1cdb3;
+  background-color: transparent;
+  border-radius: 50%;
+  margin-left: 5px;
+  display: none;
+}
 
 .our-friends-button {
   padding: 15px 45px;
@@ -613,6 +612,12 @@ li {
   width: 22%;
 }
 
+.our-friends-button:hover {
+  background: #fddcc4;
+  cursor: pointer;
+  transition: 1s;
+}
+
 .our-friends-button-link {
   font-family: "Georgia", serif;
   font-style: normal;
@@ -624,20 +629,15 @@ li {
   text-decoration: none;
 }
 
-.our-friends-button:hover {
-  background: #fddcc4;
-  cursor: pointer;
-  transition: 1s;
-}
-
 /* ----------------------------HELP---------------------------- */
 .help {
   background: #ffffff;
+  background-size: 100%;
 }
 
 .help-container {
   height: 611px;
-  background: #ffffff;
+  /* background: #ffffff; */
   padding-top: 83px;
 }
 
@@ -719,12 +719,13 @@ li {
 /* ----------------------------IN ADDITION---------------------------- */
 .in-addition {
   background: #f6f6f6;
+  background-size: 100%;
 }
 
 .in-addition-container {
   height: 462px;
   padding-top: 80px;
-  background: #f6f6f6;
+  /* background: #f6f6f6; */
 }
 
 .in-addition-block {
@@ -769,15 +770,6 @@ li {
   color: #545454;
 }
 
-.in-addition-text-transparent {
-  font-family: "Arial", serif;
-  font-style: italic;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 18px;
-  color: #b2b2b2;
-}
-
 .credit-button {
   padding: 11px 15px;
   width: 349px;
@@ -799,7 +791,8 @@ li {
 .credit-icon {
   background-image: url("../../assets/icons/credit-card.svg");
   background-repeat: no-repeat;
-  background-position: 0;
+  background-position: 15px 10px;
+  /* background-position: 0; */
   /* padding-top: 3px; */
   /* position: absolute; */
   /* background-position: left; */
@@ -826,9 +819,19 @@ li {
   /* margin-left: 40px; */
 }
 
+.in-addition-text-transparent {
+  font-family: "Arial", serif;
+  font-style: italic;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  color: #b2b2b2;
+}
+
 /* ----------------------------FOOTER---------------------------- */
 .footer {
   background-image: url("../../assets/images/gradient-bg-1280.jpg");
+  background-size: 100%;
   /* background: url(noise_lines_transparent@2X.png),
     radial-gradient(110.67% 538.64% at 5.73% 50%, #513d2f 0%, #1a1a1c 100%),
     #211f20; */
@@ -837,7 +840,7 @@ li {
 
 .footer-container {
   height: 350px;
-  background-image: url("../../assets/images/gradient-bg-1280.jpg");
+  /* background-image: url("../../assets/images/gradient-bg-1280.jpg"); */
 }
 
 .footer-block {
@@ -929,10 +932,3 @@ li {
 }
 
 /* --------slider---------- */
-.no {
-  display: none;
-}
-.yes {
-  /* display: none; */
-  /* display: block; */
-}
