--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -7,7 +7,7 @@ html {
 
 /* ----------------------------HEADER---------------------------- */
 .header {
-  background-image: url("../../assets/images/gradient-bg-1280.jpg");
+  background-image: url("../../assets/images/bg-1280.jpg");
   background-size: 100%;
   /* background: url(noise_lines_transparent@2X.png),
     radial-gradient(100% 215.42% at 0% 0%, #5b483a 0%, #262425 100%), #211f20; */
@@ -110,7 +110,7 @@ html {
 } */
 /* ----------------------------NOT ONLY---------------------------- */
 .not-only {
-  background-image: url("../../assets/images/gradient-bg-1280.jpg");
+  background-image: url("../../assets/images/bg-1280.jpg");
   background-size: 100%;
   /* background: url(noise_lines_transparent@2X.png),
     radial-gradient(100% 215.42% at 0% 0%, #5b483a 0%, #262425 100%), #211f20; */
@@ -830,7 +830,7 @@ html {
 
 /* ----------------------------FOOTER---------------------------- */
 .footer {
-  background-image: url("../../assets/images/gradient-bg-1280.jpg");
+  background-image: url("../../assets/images/bg-footer-1280.jpg");
   background-size: 100%;
   /* background: url(noise_lines_transparent@2X.png),
     radial-gradient(110.67% 538.64% at 5.73% 50%, #513d2f 0%, #1a1a1c 100%),
