--- a/shelter/pages/pets/style-adaptive2.css
+++ b/shelter/pages/pets/style-adaptive2.css
@@ -94,7 +94,10 @@
   }
 
   /* ----------------------------FOOTER---------------------------- */
-
+  .footer {
+    background-image: url("../../assets/images/bg2-footer-768.jpg");
+    background-size: 100%;
+  }
   .footer-container {
     height: 639px;
   }
@@ -133,9 +136,6 @@
     padding-top: 10px;
     padding-left: 15px;
   }
-  .header-nav {
-    display: none;
-  }
   .hamburger {
     display: block;
     position: absolute;
@@ -157,10 +157,44 @@
   }
   .hamburger:hover {
     cursor: pointer;
-    filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg)
-      brightness(92%) contrast(87%);
+    /* filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg)
+      brightness(92%) contrast(87%); */
   }
-
+  .header-nav {
+    position: fixed;
+    width: 320px;
+    right: -320px;
+    height: 823px;
+    top: 0;
+    background-color: #ffffff;
+    overflow-x: hidden;
+    transition: right 0.8s;
+    z-index: 1;
+    padding-top: 249px;
+    padding-right: 21px;
+  }
+  .header-ul {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    align-items: center;
+    /* gap: 10px; */
+    /* margin: 0; */
+  }
+  .header-li {
+    display: block;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 41px;
+    margin-right: 15px;
+  }
+  .header-link {
+    font-size: 32px;
+  }
+  .header-nav.navbar {
+    position: absolute;
+    right: 0px;
+  }
   /* ----------------------------OUR FRIENDS---------------------------- */
   .our-friends-container {
     height: 1649px;
@@ -257,10 +291,12 @@
   }
 
   /* ----------------------------FOOTER---------------------------- */
-
+  .footer {
+    background-image: url("../../assets/images/bg2-footer-320.jpg");
+    background-size: 100%;
+  }
   .footer-container {
     height: 809px;
-    background-image: url("../../assets/images/gradient-bg-footer-320.jpg");
   }
   .contacts {
     padding-top: 30px;
