--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -31,6 +31,10 @@ html {
   /* flex-wrap: wrap; */
   /* justify-content: space-between; */
 }
+/* 
+.logo2 {
+  display: none;
+} */
 
 .logo-title {
   /* font-family: "Georgia", serif; */
@@ -69,9 +73,6 @@ html {
   padding-right: 5px;
   /* height: 27px; */
   /* max-width: 720px; */
-}
-
-.header-ul {
 }
 
 .header-li {
