feat: add logo burger

--- a/shelter/pages/main/style-adaptive.css
+++ b/shelter/pages/main/style-adaptive.css
@@ -11,12 +11,15 @@
     background-image: url("../../assets/images/bg-768.jpg");
     background-size: 100%;
   }
+
   .header-container {
     height: 60px;
   }
+
   .logo-title {
     padding-top: 60px;
   }
+
   .header-li {
     padding-left: 30px;
   }
@@ -26,28 +29,34 @@
     background-image: url("../../assets/images/bg-768.jpg");
     background-size: 100%;
   }
+
   .not-only-content {
     padding-top: 60px;
     padding-left: 125px;
   }
+
   .not-only-text {
     padding-top: 13px;
     padding-bottom: 37px;
     width: 460px;
   }
+
   .not-only-button {
     margin-top: 5px;
     margin-bottom: 100px;
     margin-left: 125px;
     padding-top: 15px;
   }
+
   .not-only-image1 {
     display: none;
   }
+
   .not-only-image2 {
     display: block;
     margin-left: 145px;
   }
+
   .not-only-image3 {
     display: none;
   }
@@ -57,21 +66,26 @@
     padding-top: 62px;
     height: 1048px;
   }
+
   .about-block {
     flex-direction: column-reverse;
     align-items: center;
   }
+
   .about-content {
     margin-right: 0;
     padding-bottom: 55px;
   }
+
   .about-image1 {
     display: none;
   }
+
   .about-image2 {
     padding-left: 0;
     display: block;
   }
+
   .about-image3 {
     display: none;
   }
@@ -80,51 +94,64 @@
   .our-friends-title {
     padding-top: 80px;
   }
+
   .our-friends-catalog {
     flex-wrap: nowrap;
     padding-top: 55px;
   }
+
   .arrow {
     padding-bottom: 0;
   }
+
   .card {
     margin: 0;
   }
+
   .card1 {
     margin-right: 20px;
   }
+
   .card2 {
     margin-left: 20px;
   }
+
   .card3 {
     display: none;
   }
+
   .card-button {
     padding: 13px 44px;
     margin: 27px 0px;
   }
+
   .our-friends-button {
     padding: 0;
     /* margin-top: 65px; */
     width: 260px;
     height: 52px;
   }
+
   /* ------modal------- */
   .modal-content {
     max-width: 630px;
     height: 350px;
     margin: 10% auto;
   }
+
   .modal-image {
     width: 350px;
     height: 350px;
   }
+
   .modal-box {
     margin-left: 350px;
   }
+
   .modal-title {
     padding-top: 10px;
   }
+
   .modal-text {
     padding-top: 18px;
     padding-bottom: 0;
@@ -132,10 +159,12 @@
     font-size: 13px;
     line-height: 110%;
   }
+
   .modal-li {
     padding-bottom: 4px;
     color: #f1cdb3;
   }
+
   .modal-span1 {
     padding-left: 4px;
   }
@@ -145,12 +174,15 @@
     height: 779px;
     padding-top: 80px;
   }
+
   .help-block {
     column-gap: 60px;
   }
+
   .help-text {
     width: 170px;
   }
+
   .help-box {
     margin-bottom: 57px;
   }
@@ -160,14 +192,17 @@
     height: 783px;
     padding-top: 80px;
   }
+
   .in-addition-block {
     align-items: center;
     flex-direction: column-reverse;
   }
+
   .in-addition-image1 {
     margin-right: 0;
     margin-top: 60px;
   }
+
   .in-addition-content {
     margin-left: 2px;
   }
@@ -178,26 +213,33 @@
     background-image: url("../../assets/images/bg-footer-768.jpg");
     background-size: 100%;
   }
+
   .footer-container {
     height: 639px;
   }
+
   .footer-block {
     justify-content: space-around;
   }
+
   .contacts {
     padding-top: 30px;
     padding-left: 3px;
   }
+
   .locations {
     padding-top: 30px;
     padding-right: 3px;
   }
+
   .link-map {
     padding-top: 0;
   }
+
   .link-map2 {
     padding-right: 34px;
   }
+
   .footer-image {
     padding-top: 63px;
   }
@@ -209,22 +251,25 @@
     max-width: 320px;
     padding: 0;
   }
+
   .header {
     background-image: url("../../assets/images/bg-320.jpg");
     background-size: 100%;
   }
+
   .header-container {
-    /* background-image: url("../../assets/images/gradient-bg-320.jpg"); */
     justify-content: space-between;
   }
-  .logo-title {
-    padding-top: 58px;
+
+  .logo.active {
+    position: absolute;
     padding-left: 10px;
+    z-index: 2;
   }
-  .logo-subtitle {
-    padding-top: 10px;
-    padding-left: 15px;
-  }
+
+  /* .logo.change {
+    display: none;
+  } */
   .hamburger {
     display: block;
     position: absolute;
@@ -232,9 +277,11 @@
     right: 53px;
     z-index: 2;
   }
-  .hamburger.change {
+
+  .hamburger.active {
     transform: rotate(90deg);
   }
+
   .hamburger .line {
     width: 30px;
     height: 2px;
@@ -244,14 +291,13 @@
     transition: all 0.3s ease-in-out;
     transition: 0.7s;
   }
+
   .hamburger:hover {
     cursor: pointer;
     /* filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg)
       brightness(92%) contrast(87%); */
   }
-  /* .header-nav {
-    display: none;
-  } */
+
   .header-nav {
     position: fixed;
     width: 320px;
@@ -265,35 +311,19 @@
     padding-top: 249px;
     padding-right: 21px;
   }
-  /* .logo2 {
-    position: fixed;
-    width: 320px;
-    right: -320px;
-    height: 823px;
-    top: 0;
-    background-image: url("../../assets/images/bg-burger-320.jpg");
-    overflow-x: hidden;
-    transition: right 0.8s;
-    z-index: 1;
-    padding-top: 49px;
-    padding-right: 11px;
-  } */
-  /* .logo {
-    position: fixed;
-    width: 320px;
-    right: -320px;
-    z-index: 1;
-    overflow-x: hidden;
-    top: 0;
-    padding-top: 39px;
-    padding-right: 11px;
-  } */
+
+  .header-nav.active {
+    position: absolute;
+    right: 0px;
+  }
 
   .header-ul {
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
     align-items: center;
+    /* margin-top: 150px; */
+    /* margin-bottom: 400px; */
     /* gap: 10px; */
     /* margin: 0; */
   }
@@ -310,18 +340,6 @@
     font-size: 32px;
   }
 
-  .header-nav.navbar {
-    position: absolute;
-    right: 0px;
-  }
-  /* .logo.navbar {
-    position: absolute;
-    right: 0px;
-  } */
-  /* .logo-title.navbar {
-    position: absolute;
-    right: 0px;
-  } */
   /* ----------------------------NOT ONLY---------------------------- */
 
   .not-only-container {
@@ -329,15 +347,18 @@
     /* height: 823px; */
     /* padding: 0; */
   }
+
   .not-only {
     background-image: url("../../assets/images/bg-320.jpg");
     background-size: 100%;
     /* background: url(noise_lines_transparent@2X.png),
       radial-gradient(100% 215.42% at 0% 0%, #5b483a 0%, #262425 100%), #211f20; */
   }
+
   .not-only-block {
     justify-content: center;
   }
+
   .not-only-content {
     padding-left: 0;
     /* padding-top: 60px; */
@@ -349,6 +370,7 @@
     /* // position: relative; */
     /* // width: calc(30% - 32px); */
   }
+
   .not-only-title {
     font-size: 25px;
     letter-spacing: 0.06em;
@@ -360,6 +382,7 @@
     /* margin-left: 86px; */
     /* padding-left: 125px; */
   }
+
   .not-only-text {
     padding-top: 25px;
     padding-bottom: 43px;
@@ -376,18 +399,22 @@
     /* padding-left: 10px; */
     /* height: 60px; */
   }
+
   .not-only-image1 {
     display: none;
   }
+
   .not-only-image2 {
     display: none;
   }
+
   .not-only-image3 {
     display: block;
     padding-left: 40px;
     padding-top: 105px;
     margin-left: 0;
   }
+
   .not-only-button {
     display: flex;
     justify-content: center;
@@ -399,27 +426,33 @@
     padding-top: 25px;
     height: 974px;
   }
+
   .about-content {
     padding-bottom: 16px;
   }
+
   .about-title {
     font-size: 25px;
     padding-bottom: 24px;
     padding-left: 52px;
     text-indent: -24px;
   }
+
   .about-text {
     padding-bottom: 23px;
     text-align: justify;
     display: flex;
     width: 270px;
   }
+
   .about-image1 {
     display: none;
   }
+
   .about-image2 {
     display: none;
   }
+
   .about-image3 {
     display: block;
   }
@@ -429,24 +462,30 @@
     height: 791px;
     padding-top: 41px;
   }
+
   .our-friends-title {
     font-size: 25px;
     padding-top: 0;
   }
+
   .our-friends-catalog {
     flex-direction: column;
     padding-top: 40px;
   }
+
   .card {
     margin: 0 auto;
     text-align: center;
   }
+
   .card1 {
     display: block;
   }
+
   .card2 {
     display: none;
   }
+
   /* .card3 {
     display: none;
   } */
@@ -454,18 +493,23 @@
     padding-top: 25px;
     padding-bottom: 4px;
   }
+
   .previous {
     display: none;
   }
+
   .next {
     display: none;
   }
+
   .previous-320 {
     display: block;
   }
+
   .next-320 {
     display: block;
   }
+
   .our-friends-button {
     margin-top: 43px;
   }
@@ -475,13 +519,16 @@
     max-width: 240px;
     height: 341px;
   }
+
   .modal-image {
     display: none;
   }
+
   .modal-box {
     padding: 0;
     margin: 0;
   }
+
   .modal-text {
     /* margin-bottom: 22px; */
     padding-right: 0;
@@ -492,6 +539,7 @@
     /* padding-left: 5px; */
     /* padding-bottom: 20px; */
   }
+
   .modal-ul {
     padding: 0;
     padding-left: 24px;
@@ -499,11 +547,13 @@
     /* padding-bottom: 60px; */
     /* margin-bottom: 30px; */
   }
+
   .modal-li {
     float: left;
     padding-bottom: 4px;
     color: #f1cdb3;
   }
+
   .modal-span1 {
     padding-left: 0;
     padding-bottom: 0;
@@ -515,11 +565,13 @@
     height: 745px;
     padding-top: 41px;
   }
+
   .help-title {
     margin-bottom: 37px;
     font-size: 25px;
     line-height: 130%;
   }
+
   /* .help-block {
     display: flex;
     flex-wrap: wrap;
@@ -556,6 +608,7 @@
     /* column-gap: 180px; */
     /* align-items: center; */
   }
+
   .icon {
     /* padding-top: 30px; */
     /* padding-bottom: 40px; */
@@ -584,6 +637,7 @@
     /* margin-top: 20px; */
     margin-bottom: 15px;
   }
+
   .help-text {
     /* row-gap: 30px; */
     /* column-gap: 20px; */
@@ -599,6 +653,7 @@
     /* margin-top: -10px; */
     /* margin-left: 10px; */
   }
+
   .help-box {
     /* width: 130px; */
     /* padding-top: 20px; */
@@ -614,27 +669,35 @@
   .help-icon1 {
     background-image: url("../../assets/icons/pet-food-320.svg");
   }
+
   .help-icon2 {
     background-image: url("../../assets/icons/transportation-320.svg");
   }
+
   .help-icon3 {
     background-image: url("../../assets/icons/toys-320.svg");
   }
+
   .help-icon4 {
     background-image: url("../../assets/icons/bowls-and-cups-320.svg");
   }
+
   .help-icon5 {
     background-image: url("../../assets/icons/shampoos-320.svg");
   }
+
   .help-icon6 {
     background-image: url("../../assets/icons/vitamins-320.svg");
   }
+
   .help-icon7 {
     background-image: url("../../assets/icons/medicines-320.svg");
   }
+
   .help-icon8 {
     background-image: url("../../assets/icons/collars-or-leashes-320.svg");
   }
+
   .help-icon9 {
     background-image: url("../../assets/icons/sleeping-area-320.svg");
   }
@@ -644,12 +707,14 @@
     height: 542px;
     padding-top: 41px;
   }
+
   .in-addition-title {
     font-size: 25px;
     text-align: center;
     padding-bottom: 20px;
     /* margin-bottom: 37px; */
   }
+
   .in-addition-text {
     /* padding-top: 1px; */
     /* padding-bottom: 2px; */
@@ -664,6 +729,7 @@
     padding-left: 18px;
     padding-right: 20px;
   }
+
   .credit-button {
     width: 281px;
     margin-left: 18px;
@@ -681,15 +747,18 @@
     /* 
     padding-top: 32px; */
   }
+
   .credit-link {
     font-size: 15px;
     line-height: 110%;
     transition: 0.7s;
     /* margin-left: 40px; */
   }
+
   .in-addition-image1 {
     display: none;
   }
+
   .in-addition-image3 {
     display: block;
     padding-top: 42px;
@@ -700,9 +769,11 @@
     background-image: url("../../assets/images/bg-footer-320.jpg");
     background-size: 100%;
   }
+
   .footer-container {
     height: 809px;
   }
+
   .footer-title {
     font-size: 25px;
     text-align: center;
@@ -710,45 +781,56 @@
     padding-left: 39px;
     /* margin-right: 0; */
   }
+
   .footer-icon-contacts-email {
     padding-left: 34px;
     padding-bottom: 4px;
   }
+
   .link-email {
     padding-right: 35px;
   }
+
   .link-tel {
     padding-bottom: 5px;
     padding-right: 41px;
   }
+
   .footer-icon-contacts-phone {
     margin-left: 5px;
     padding-bottom: 4px;
     padding-left: 34px;
   }
+
   .locations {
     padding-top: 27px;
     padding-right: 0;
     /* margin-bottom: 2px; */
   }
+
   .title-locations {
     width: 270px;
     padding-left: 30px;
     padding-top: 6px;
   }
+
   .link-box-locations {
     padding-top: 40px;
   }
+
   .link-map {
     padding-right: 8px;
     padding-top: 0;
   }
+
   .footer-image {
     padding-top: 40px;
   }
+
   .footer-puppy1 {
     display: none;
   }
+
   .footer-puppy3 {
     display: block;
   }
