refactor: changes to fix

--- a/shelter/pages/main/style-adaptive.css
+++ b/shelter/pages/main/style-adaptive.css
@@ -743,9 +743,7 @@
     /* padding: 0; */
     /* display: flex; */
     /* justify-content: space-around; */
-
-    /* 
-    padding-top: 32px; */
+    /* padding-top: 32px; */
   }
 
   .credit-link {
