--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -117,8 +117,8 @@ html {
     radial-gradient(100% 215.42% at 0% 0%, #5b483a 0%, #262425 100%), #211f20; */
 }
 .not-only-container {
+  padding-top: 60px;
   /* background-image: url("../../assets/images/gradient-bg-1280.jpg"); */
-  padding-top: 59px;
   /* background-repeat: no-repeat; */
   /* background-position: center -90px; */
   /* height: 908px; */
@@ -140,7 +140,8 @@ html {
 
 .not-only-content {
   max-width: 460px;
-  padding-top: 133px;
+  padding-top: 163px;
+  /* padding-top: 133px; */
   /* padding-right: 30px; */
   /* z-index: 1; */
   /* position: absolute; */
@@ -155,6 +156,7 @@ html {
   font-size: 44px;
   color: #ffffff;
   line-height: 130%;
+  padding-bottom: 28px;
   /* display: flex;
   align-items: center; */
 }
@@ -216,7 +218,7 @@ html {
 }
 .about-container {
   /* background-color: #ffffff; */
-  padding-top: 80px;
+  padding-top: 77px;
   height: 588px;
 }
 
@@ -228,7 +230,8 @@ html {
 
 .about-image1 {
   display: block;
-  padding-left: 50px;
+  padding-left: 52px;
+  padding-top: 3px;
 }
 
 .about-image2 {
@@ -241,7 +244,7 @@ html {
 
 .about-content {
   max-width: 430px;
-  margin-right: 50px;
+  margin-right: 52px;
   /* padding-bottom: 85px; */
   /* padding-top: 50px; */
 }
@@ -370,6 +373,7 @@ html {
 
 .card:hover {
   background: #ffffff;
+  cursor: pointer;
 }
 
 .card-image {
@@ -876,8 +880,11 @@ html {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  /* 
-  padding-top: 32px; */
+  /* padding-top: 32px; */
+}
+
+.credit-button:hover {
+  cursor: pointer;
 }
 
 .credit-icon {
