--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -374,6 +374,7 @@ html {
 .card:hover {
   background: #ffffff;
   cursor: pointer;
+  box-shadow: 0px 5px 15px 2px rgba(0, 0, 0, 0.25);
 }
 
 .card-image {
