--- a/shelter/pages/pets/style2.css
+++ b/shelter/pages/pets/style2.css
@@ -177,6 +177,7 @@ html {
 .card:hover {
   background: #ffffff;
   cursor: pointer;
+  box-shadow: 0px 5px 15px 2px rgba(0, 0, 0, 0.25);
 }
 
 .card-image {
