fix: change size adaptive 320

--- a/shelter/pages/main/style-adaptive.css
+++ b/shelter/pages/main/style-adaptive.css
@@ -379,7 +379,8 @@
   .not-only-title {
     font-size: 25px;
     letter-spacing: 0.06em;
-    /* padding-top: 12px; */
+    padding-top: 12px;
+    padding-bottom: 16px;
     /* margin-top: 12px; */
     display: flex;
     align-items: center;
